2016-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/limitps.spad, src/algebra/mrv_limit.spad:
	Allow variable in limit point

2016-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/logic.spad: Fix function names

2016-10-13  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/pfr.spad: Misc fixes and improvements

2016-10-13  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/bezout.spad: Generalize column indexing

2016-10-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/acplot.spad, src/algebra/aggcat.spad,
	src/algebra/array1.spad, src/algebra/clip.spad,
	src/algebra/combfunc.spad, src/algebra/defintef.spad,
	src/algebra/defintrf.spad, src/algebra/draw.spad,
	src/algebra/drawpak.spad, src/algebra/fortran.spad,
	src/algebra/genups.spad, src/algebra/liouv.spad,
	src/algebra/mesh.spad, src/algebra/plot.spad,
	src/algebra/plot3d.spad, src/algebra/plottool.spad,
	src/algebra/random.spad, src/algebra/scene.spad,
	src/algebra/seg.spad, src/algebra/stream.spad,
	src/algebra/string.spad, src/algebra/sum.spad,
	src/algebra/view2D.spad, src/interp/i-spec1.boot: Replace
	'lo' by 'low' and 'hi' by 'high'

2016-10-10  Qian Yun  <oldk1331@gmail.com>

	* src/algebra/bezout.spad: Fix indexing error

2016-10-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pdecomp.spad: Remove
	src/algebra/updecomp.spad: Extend to nonzero characteristic
	src/algebra/Makefile.in, src/algebra/algfunc.spad,
	src/algebra/exposed.lsp: Adjust

2016-10-07  Martin Baker  <ax87438@martinb.com>

	* src/algebra/gpresent.spad: Fix and improve

2016-10-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/Makefile.in, src/interp/util.lisp:
	Include whole interpreter in the executable

2016-10-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/oct.spad: Sanitize Octonion

2016-09-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/lie.spad: Remove wrong exports

2016-09-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
