@@ -1,5 +1,11 @@
 2016-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/g-boot.boot, src/interp/macros.lisp,
+	src/interp/postpar.boot, src/interp/property.lisp:
+	Cleanup, remove wrong transformation
+
+2016-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/limitps.spad, src/algebra/mrv_limit.spad:
 	Allow variable in limit point
 
